bug: TopSellerCard.tsx overflow bug

--- a/localSpoon/src/App.css
+++ b/localSpoon/src/App.css
@@ -17,7 +17,7 @@
   margin: 0; /* Remove default margin for paragraphs inside the div */
 }
 
-/* Nav Bar TODO: rename the classes */
+
 .navbar-bottom-left {
   align-self: end;
   position: absolute;
@@ -34,12 +34,7 @@
 
 }
 
-.analytics-page-secondary-navbar {
-  /* padding-top: 0.75rem; */
-  width: 77%;
-  margin: auto;
-  position: relative;
-}
+
 
 .navbar-bottom-right, .navbar-middle-right, .navbar-top-right {
   justify-self: end;
@@ -56,9 +51,17 @@
   margin: auto;
 }
 
+.analytics-page-secondary-navbar {
+  /* padding-top: 0.75rem; */
+  width: 77%;
+  margin: auto;
+  position: relative;
+}
+
 .analytics-page-grid-container {
   display: grid;
-  grid-template-rows: 1fr 1fr; /* Two rows, each taking up 1/2 of the height */
+  grid-template-rows: 1fr 1fr;
+  overflow: hidden;
 }
 
 .analytics-page-top-row {
@@ -74,18 +77,20 @@
 .analytics-bottom-container {
   padding: 16px; /* Add padding for better spacing */
   text-align: center; /* Center align text or content */
-  /* Add any additional styling based on your design */
 }
 
 
 .analytics-bottom-left{
-
+  overflow: hidden; /* Hide overflow */
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
 }
 
-.canvasContainer {
+.analytics-top-selling-products-card {
   position: relative;
   width: 100%;
-  height: 100%;
+  height: 100%; /* Updated to 100% height */
   display: flex;
   flex-direction: column;
   justify-content: center;
